# api/handler/nyuka_handler.go
@@ -41,10 +41,17 @@ func (ch *NyukaHandler) GetNyukaCount(ctx *gin.Context) {
 		return
 	}
 
-	ctx.JSON(http.StatusOK, gin.H{"CountInfo": response})
+	ctx.JSON(http.StatusOK, gin.H{"入荷件数": response})
 
 }
 
+//	@Summary JANによって検品情報取得
+//
+// @accept			application/json
+//
+// @Param   input body request.NyukaInputJANRequest true "jan info"
+// @Success	200			{object}	response.NyukaInputJANResponse	"成功"
+// @Router		/api/v1/nyuka/getjaninfo [post]
 func (ch *NyukaHandler) GetNyukaJANInfo(ctx *gin.Context) {
 
 	request := request.NyukaInputJANRequest{}
@@ -62,10 +69,17 @@ func (ch *NyukaHandler) GetNyukaJANInfo(ctx *gin.Context) {
 		return
 	}
 
-	ctx.JSON(http.StatusOK, gin.H{"CountInfo": response})
+	ctx.JSON(http.StatusOK, gin.H{"商品情報明細": response})
 
 }
 
+//	@Summary 入荷数を更新する
+//
+// @accept			application/json
+//
+// @Param   input body request.NyukaInputJANNKAJISURequest true "jisekisu　input"
+// @Success	200	{boolean} IsSuccess	"成功"
+// @Router		/api/v1/nyuka/update [PATCH]
 func (ch *NyukaHandler) UpdateNyukaInfo(ctx *gin.Context) {
 
 	request := request.NyukaInputJANNKAJISURequest{}
@@ -88,6 +102,6 @@ func (ch *NyukaHandler) UpdateNyukaInfo(ctx *gin.Context) {
 		return
 	}
 
-	ctx.JSON(http.StatusOK, gin.H{"CountInfo": response})
+	ctx.JSON(http.StatusOK, gin.H{"実績数更新結果": response})
 
 }
